Fix three layout issues on homepage
- Move recruiting notice after bio with highlighted styling
- Fix stray </div> by properly closing all publication <p> tags
- Fix news date vertical alignment and h3 top margin

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -70,6 +70,44 @@
   line-height: 1.55;
 }
 
+.news-item__date {
+  flex-shrink: 0;
+  margin-right: 1em;
+  padding-top: 3px;
+  font-size: 0.85em;
+  color: #888;
+  white-space: nowrap;
+  min-width: 70px;
+}
+
+.news-item__content {
+  flex: 1;
+
+  h3 {
+    margin-top: 0;
+    font-size: 1em;
+  }
+
+  p {
+    margin-top: 0.3em;
+    font-size: 0.95em;
+  }
+}
+
+/*
+   Recruit notice
+   ========================================================================== */
+
+.recruit-notice {
+  margin: 1em 0 1.5em;
+  padding: 0.75em 1em;
+  border-left: 4px solid $link-color;
+  background-color: #f0f7fb;
+  border-radius: 0 4px 4px 0;
+  font-size: 0.95em;
+  line-height: 1.6;
+}
+
 /*
    Section nav (scroll-spy)
    ========================================================================== */
